# octobell

./: LICENSE.md  README.md  pyproject.toml
docs/: configuration.md  rules.md  troubleshooting.md
octobell/: __main__.py  browser.py  config.py  daemon.py  email_parser.py  enums.py  imap_client.py  models.py  rules.py
octobell/notifier/: __init__.py  alerter.py  base.py  console.py  notify_send.py
tests/: test_config.py  test_daemon.py  test_email_parser.py  test_enums.py  test_rules.py
