[project]
name = "octobell"
version = "0.1.0"
description = "GitHub notification daemon using IMAP IDLE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imapclient>=3.0.0",
    "jsonschema>=4.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
octobell = "octobell.__main__:main"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
